# pycode

./: .gitignore  .gitlab-ci.yml  .releaserc.yml  README.md
media_server/: Dockerfile.api  Dockerfile.publisher  Dockerfile.webapp  build.sh  run.sh
media_server/client/: .env  .env.development  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
media_server/client/components/: CamerasView.tsx  InfoLinks.tsx  Progress.tsx  TitlePurpose.tsx  WarrningMessage.tsx
media_server/client/pages/: index.tsx
media_server/example_config/: camera_mapping.json  conf.json
media_server/server/: README.md  pyproject.toml  run.sh
media_server/server/src/ssi_camera/: __init__.py  access_control.py  camera.py  env_vars.py  main.py  session_store.py
media_server/server/static/styles/: style.css
organizer_app/client_app/: Dockerfile.webapp  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
organizer_app/client_app/src/: App.js  authConfig.js  index.css  index.js  theme.js
organizer_app/client_app/src/components/: Calendar.jsx  CameraAccess.jsx  CopyClipboard.jsx  Dialog.jsx  EmbeddedLink.jsx  Header.jsx  Participants.jsx  Progress.jsx  SendInvite.jsx  Stepper.jsx
organizer_app/client_app/src/scenes/creatingmeeting/: index.jsx
organizer_app/client_app/src/scenes/getcredential/: index.jsx
organizer_app/client_app/src/scenes/global/: SideBar.jsx  TopBar.jsx
organizer_app/server/: Dockerfile.service  pyproject.toml
organizer_app/server/src/ssi_organizer/: __init__.py  main.py
(+1 files in other folders)
