[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssi-organizer"
version = "0.0.1"
authors = [
  { name="Aditya Gudal", email="aditya.gudal@nokia.com" },
]
description = "Supports a database to store and receive meeting data"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["flask",
                "flask-cors",
                "gunicorn",
                "gevent",
                "requests"]

[project.scripts]
ssi-organizer = "ssi_organizer.main:main"
